<resources>
    <string name="app_name">Dalker</string>
    <string name="title_activity_main">Dalker</string>
    <string name="title_home">Search</string>
    <string name="title_dashboard">Favorite</string>
    <string name="title_notifications">Profile</string>
    <string name="try_paris">Try \"Paris\" …</string>
    <string name="filter">Filter</string>
    <string name="dalker_photo">dalker photo</string>
    <string name="dalker_test_name">Alisson Plisson</string>
    <string name="dalker_age_test">24 years old</string>
    <string name="dalker_doggo_test">2 doggos possible</string>
    <string name="dalker_test_rate">Rate: 4,5/5</string>
    <string name="dalker_price_test">$12/h</string>
    <string name="favorite_dalker">favorite dalker</string>
    <string name="dalker_address_test">Paris 8e</string>
    <string name="text_test">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="dalker_review">Review</string>
    <string name="login">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="comment">Comment</string>
    <string name="call">Call</string>
    <string name="GUEST">GUEST</string>
    <string name="login_started_dalker">Sign in to become Dalker</string>
    <string name="settings">Settings</string>
    <string name="help">help us</string>
    <string name="help_us_to_improve">Help us to improve</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log out</string>
    <string name="re_type_your_password">Re-type your password</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="user_session">USER_SESSION</string>
    <string name="dalker_list_error">No result found</string>
    <string name="fake_service_user">4 doggo possible</string>
    <string name="rate_fake_user">Rate: 4.5/5</string>
    <string name="year">years old</string>
    <string name="dalker_intent_detail">DALKER_CLICKED</string>
    <string name="dalker_intent_position">POSITION_CLICKED</string>
    <string name="title_comment">Comment</string>
    <string name="share">share</string>
    <string name="demo">demo</string>
    <string name="description_empty_error">No description</string>
    <string name="tel">tel</string>
    <string name="no_fav_message">No dalker favorite. Please insert one!</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="comment_here">Comment here ...</string>
    <string name="intent_login">userSession</string>
    <string name="intent_user_default">No user</string>
    <string name="password_required">Your password requires minimum 8 characters at least 1 Alphabet, 1 number and 1 special character</string>
    <string name="confirm_error">Not the same password</string>


    <!-- Firestore indice -->
    <string name="users">users</string>
    <string name="username">username</string>
    <string name="login_username">login.username</string>
    <string name="login_password">login.password</string>
    <string name="location_city">location.city</string>

    <!-- Profile-->
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="title">Gender</string>
    <string name="login_id">Login ID</string>
    <string name="password">Password</string>
    <string name="Email">Email</string>
    <string name="phone_number">Telephone number</string>
    <string name="address">Address</string>
    <string name="state">State</string>
    <string name="code_postal">Post code</string>
    <string name="city">City</string>
    <string name="age">Age</string>
    <string name="words_required">800 words required …</string>
    <string name="description">Description</string>
    <string name="price">Price per hour</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>

    <!-- Spinner option-->
    <string name="prompt"> </string>
    <string name="fragment">fragment</string>
    <string name="reference">REFERENCE</string>
    <string name="device_id">DEVICE_ID</string>
    <string name="done">DONE</string>
    <string name="create_account">Create account</string>
    <string-array name="title_arrays">
        <item> </item>
        <item>Mr</item>
        <item>Mme</item>
    </string-array>


    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>

    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>

    <string name="admob_app_id">ca-app-pub-8390944528541948~9296512467</string>
    <string name="ad_unit_id">ca-app-pub-8390944528541948/5241717385</string>
    <string name="latitude">LATITUDE</string>
    <string name="longitude">LONGITUDE</string>
    <string name="current_location">CURRENT_LOCATION</string>
    <string name="user_list">USER_LIST</string>
    <string name="user_list_location">USER_LIST_BY_LOCATION</string>
    <string name="doggo_service_number">Doggo service number</string>
    <string name="no_review">No review</string>
    <string name="user_state_list">USER_STATE_LIST</string>
    <string name="location_state">LOCATION_STATE</string>
    <string name="fragment_id">FRAGMENT_ID</string>
    <string name="password_state">PASSWORD_STATE</string>
    <string name="login_state">LOGIN_STATE</string>
    <string name="email_key">EMAIL_KEY</string>
    <string name="login_key">LOGIN_KEY</string>
    <string name="pasword_key">PASSWORD_KEY</string>
    <string name="confirm_key">CONFIRM_KEY</string>
    <string name="user_key">USER_KEY</string>
    <string name="fragment_key">FRAGMENT_KEY</string>
    <string name="main_fragment">MAIN_FRAGMENT</string>
    <string name="user_list_session">USER_LIST_SESSION</string>
    <string name="login_failed">User login failed</string>
    <string name="welcome">Welcome</string>
    <string name="error_in_login">Error in login with user</string>
    <string name="transition_key">TRANSITION_KEY</string>
    <string name="title_mr">Mr</string>
    <string name="update_finish">Update finished</string>
    <string name="update_ko">Update data KO</string>
    <string name="photo_error">Photo can\'t be create: %s</string>
    <string name="provider">dalker.cmtruong.com.app.fileprovider</string>
    <string name="jpg_suffix">.jpg</string>
    <string name="reviews_filed">reviews</string>
    <string name="type_text">text/plain</string>
    <string name="success">with successfull to favorite list</string>
    <string name="add">Add</string>
    <string name="delete_fav">Delete with sucessful</string>
    <string name="add_user">Add user</string>
    <string name="with_success">with successful</string>
    <string name="failed_add">Failed to add user</string>
    <string name="to_the_database">to the database</string>
    <string name="m_login_user">login/username</string>
    <string name="m_location_city">location/city</string>
    <string name="m_reviews">reviews</string>

</resources>
