<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_margin="@dimen/cardview_margin"
    android:clickable="true"
    android:elevation="@dimen/cardview_default_elevation"
    android:focusable="true"
    android:foreground="?selectableItemBackground"
    app:cardCornerRadius="@dimen/cardview_default_radius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="6">

        <ImageView
            android:id="@+id/dalker_iv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/photo_item_margin"
            android:layout_weight="2"
            android:contentDescription="@string/dalker_photo"
            android:scaleType="centerCrop"
            tools:src="@drawable/ic_launcher_foreground" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/location_et_margin"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dalker_name_tv"
                style="@android:style/TextAppearance.Material.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/location_et_margin"
                android:layout_marginTop="@dimen/cardview_margin"
                android:maxLength="18"
                android:maxLines="1"
                android:textSize="@dimen/name_size"
                android:textStyle="bold"
                tools:text="@string/dalker_test_name" />

            <TextView
                android:id="@+id/dalker_age_tv"
                style="@android:style/TextAppearance.Material.Small"
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/location_et_margin"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/location_et_margin"
                android:fontFamily="monospace"
                android:textStyle="italic"
                tools:text="@string/dalker_age_test" />

            <TextView
                android:id="@+id/dalker_service_tv"
                style="@android:style/TextAppearance.Material.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/location_et_margin"
                android:fontFamily="monospace"
                android:textStyle="italic"
                tools:text="@string/dalker_doggo_test" />

            <TextView
                android:id="@+id/dalker_rate_tv"
                style="@android:style/TextAppearance.Material.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                tools:text="@string/dalker_test_rate" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/dalker_price_tv"
                style="@android:style/TextAppearance.Material.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:textStyle="bold"
                tools:text="@string/dalker_price_test" />
        </FrameLayout>


    </LinearLayout>
</android.support.v7.widget.CardView>